--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Lesson1</string>
+    <string name="fan_off">Off</string>
+    <string name="fan_low">1</string>
+    <string name="fan_med">2</string>
+    <string name="fan_high">3</string>
 </resources>
